--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 * {
-  font-family: sans-serif;
   margin: 0;
   padding: 0;
+  font-family: ubuntu;
 }
 
 body {
@@ -20,6 +20,34 @@ body {
   border-radius: 10px;
 }
 
+.list-notes {
+  height: 600px;
+  background-color: #ededed;
+}
+
+.container-notes {
+  padding: 10px;
+}
+
+.body-notes {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.my-note {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 5px;
+  height: 80px;
+  width: 300px;
+}
+
 button {
   background-color: rgb(56, 56, 63);
   font-weight: 500;
@@ -32,3 +60,12 @@ button {
   margin: 5px 0 5px 0;
 }
 
+.bi {
+  font-size: 20px;
+}
+
+.bi:hover {
+  cursor: pointer;
+  zoom: 1.1;
+  color: red;
+}
