--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,10 +1,24 @@
 form {
-    height: 90%;
+    height: 600px;
     background-color: #ededed;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+label {
+    font-size: 20px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+input {
+    width: 300px;
+    border: solid 1.9px black;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 18px;
 }
 
 textarea {
@@ -14,7 +28,6 @@ textarea {
     border-radius: 10px;
     padding: 5px;
     font-size: 18px;
-
 }
 
 .form-body {
