--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -21,7 +21,7 @@ input {
     font-size: 18px;
 }
 
-textarea {
+.text-area {
     width: 300px;
     height: 200px;
     border: solid 1.9px black;
@@ -44,4 +44,9 @@ textarea {
     display: flex;
     justify-content: end;
     width: 300px;
+}
+
+.empity {
+    color: red;
+    font-style: italic;
 }
